fixes to mobile menu links and to home nav spacing

--- a/portfolioStyles/about.css
+++ b/portfolioStyles/about.css
@@ -38,9 +38,6 @@ a:hover{
     color: white;
 }
 
-.fa.fa-navicon.dropbtn:hover{
-    color: #D6665A;
-}
 
 p a{
     color: inherit;
@@ -85,12 +82,12 @@ p a:hover{
 .dropdown {
     position: fixed;
     display: block;
-    right: 5px;
+    right: 0px;
 }
 
 /* Dropdown Content (Hidden by Default) */
 .dropdown-content {
-    border-radius: 15px 0 0 15px;
+    border-radius: 0 0 0 15px;
     display: none;
     position: absolute;
     right: 0;
@@ -120,7 +117,7 @@ color:#D6665A }
 
 /* Change the background color of the dropdown button when the dropdown content is shown */
 .dropdown:hover .dropbtn {
-    background-color: rgba(16, 90, 106, .2);
+    background-color: #D6665A;
 }
 
 
