--- a/portfolioStyles/common-cs.css
+++ b/portfolioStyles/common-cs.css
@@ -77,10 +77,6 @@ li a:hover{
     color: white;
 }
 
-.fa.fa-navicon.dropbtn:hover{
-    color: #D6665A;
-}
-
 a:hover{
     cursor: pointer;
 }
@@ -106,7 +102,7 @@ a:hover{
     margin-top: 0%;
 }
 
-/* Dropdown Button */
+
 .dropbtn {
     color: white;
     padding: 16px;
@@ -115,16 +111,15 @@ a:hover{
     cursor: pointer;
 }
 
-/* The container <div> - needed to position the dropdown content */
 .dropdown {
     position: fixed;
     display: block;
-    right: 5px;
+    right: 0px;
 }
 
-/* Dropdown Content (Hidden by Default) */
+
 .dropdown-content {
-    border-radius: 15px 0 0 15px;
+    border-radius: 0 0 0 15px;
     display: none;
     position: absolute;
     right: 0;
@@ -134,7 +129,6 @@ a:hover{
     z-index: 1;
 }
 
-/* Links inside the dropdown */
 .dropdown-content a {
     font-family: Ubuntu, Helvetica, Arial, sans-serif;
     color: black;
@@ -143,18 +137,17 @@ a:hover{
     display: block;
 }
 
-/* Change color of dropdown links on hover */
 .dropdown-content a:hover {background-color: #f1f1f1; font-weight: bolder;
 color:#D6665A }
 
-/* Show the dropdown menu on hover */
+
 .dropdown:hover .dropdown-content {
     display: block;
 }
 
 /* Change the background color of the dropdown button when the dropdown content is shown */
 .dropdown:hover .dropbtn {
-    background-color: rgba(16, 90, 106, .2);
+    background-color: #D6665A;
 }
 
 
