--- a/portfolioStyles/main.css
+++ b/portfolioStyles/main.css
@@ -18,7 +18,6 @@ a:hover{
     color: white;
 }
 
-/* Dropdown Button */
 .dropbtn {
     color: white;
     padding: 20px;
@@ -29,14 +28,12 @@ a:hover{
     border-radius: 0 0 0 15px;
 }
 
-/* The container <div> - needed to position the dropdown content */
 .dropdown {
     position: fixed;
     display: block;
     right: 0px;
 }
 
-/* Dropdown Content (Hidden by Default) */
 .dropdown-content {
     border-radius: 15px 0 0 15px;
     display: none;
@@ -48,7 +45,6 @@ a:hover{
     z-index: 1;
 }
 
-/* Links inside the dropdown */
 .dropdown-content a {
     font-family: Ubuntu, Helvetica, Arial, sans-serif;
     color: black;
@@ -66,7 +62,6 @@ color:#D6665A }
     display: block;
 }
 
-/* Change the background color of the dropdown button when the dropdown content is shown */
 .dropdown:hover .dropbtn {
     background-color: #D6665A;
     border-radius: 0;
@@ -174,7 +169,7 @@ ul{
     list-style-type: none;
     font-size: 24px;
     display:inline-block;
-    width:24%;
+    width:15%;
     margin:0;
     padding:1.5% 0 0 0;
     
@@ -341,7 +336,9 @@ div.column.third a{
 
 @media (max-width: 980px) {
 
-    
+    .hero-nav li {
+        width:20%;
+    }
     
     div.column.full h2{
     }
@@ -360,6 +357,10 @@ div.column.third a{
     }
 
 @media (max-width: 680px) {
+    
+    .hero-nav li {
+        width:24%;
+    }
     
     .project-title{
         font-size: 48px;
